# built-on-envoy

cli/internal/envoy/: config.go  extension_test.go
cli/internal/extensions/: manifest.go
extensions/auth-jwt/: manifest.yaml
extensions/cache/: manifest.yaml
extensions/composer/waf/: crs_test.go
extensions/cors/: manifest.yaml
extensions/dns-gateway/: Cargo.toml  build.rs
extensions/dns-gateway/proto/: dns_gateway.proto
extensions/dns-gateway/src/: lib.rs
extensions/dns-gateway/src/dns_gateway/: cache_lookup.rs  mod.rs  proto.rs
extensions/rate-limiter/: manifest.yaml
extensions/request-logger/: manifest.yaml
extensions/transform-headers/: manifest.yaml
website/: package-lock.json
website/public/: extensions.json
website/src/components/: ExtensionCard.astro  Extensions.astro  Footer.astro
website/src/pages/docs/: getting-started.mdx
website/src/styles/: docs.css  extension-detail.css  extensions.css  main.css
